bug(long names): handle long event and center names
truncate event names in cards if its too long
truncate center names and addresses in cards if they're too long

[starts #158334161]

--- a/client/css/centers.module.css
+++ b/client/css/centers.module.css
@@ -37,7 +37,11 @@ a, a:link, a:visited, a:active {
   line-height: 1.25;
   font-weight: 500;
   letter-spacing: -.02em;
-  word-wrap: break-word;
+  /* word-wrap: break-word; */
+  text-overflow: ellipsis;
+  max-width: 80%;
+  white-space: nowrap;
+  overflow: hidden;
 }
 
 .center-name a{
